# WoWsBot

./: .gitignore  README.md  main.py  pyproject.toml
resources/: config.json  user.json
resources/res_mods/PnFMods/WoWsAPI/: Main.py  docs.md
src/: API.py  ArLctr.py  Bot.py  GUI.py  HkMgr.py  MCtrl.py  WinMgr.py
