[project]
name = "wowsbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss",
    "numpy",
    "keyboard",
    "pywin32",
    "pygetwindow",
    "pydirectinput",
    "opencv-python",
    "rapidocr-onnxruntime",
    "scikit-learn",
    "ultralytics",
    "onnx",
]
